css/editor.css
#post-body-content {
	width: 710px;
}

.scrib_test{
	border: 2px solid red;
}

#scrib_meditor_div div.inside {
	padding-bottom: 25px;
}

ul#scrib_meditor {
	padding: 0;
	margin: 0;
}

#scrib_meditor li.fieldset_title {
	list-style: none;
	width:692px;
	padding: 0;
	margin: 0;
	clear:left;
}

#scrib_meditor h2 {
/*	border: 2px solid red; */
	padding: 20px 0 0 0;
	margin: 0 0 0 0;
}

#scrib_meditor ul.fieldset_title {
/*border: 10px solid #999;*/
	width:692px;
	padding: 0;
	margin: 0;
}

#scrib_meditor li.fieldset {
	list-style: none;
	width:692px;
	height: 50px;
	padding: 0;
	margin: 0;
	clear:left;
}

/* repeatable buttons */
#scrib_meditor div.repeatable-buttons {
	width: 65px;
	display: inline;
	float: right;
}
#scrib_meditor div.repeatable button:hover, #scrib_meditor div.repeatable button:focus {
	cursor: pointer;
	-webkit-transform: scale(1.3,2) translate(0px, 2px);
}

/* sortable handles */
#scrib_meditor div.sortable-handle {
	width: 35px;
	display: inline;
	cursor: pointer;
	float: left;
}

#scrib_meditor ul.fieldset {
	list-style: none;
	padding: 0;
	margin: 0;
	display: inline;
}

#scrib_meditor li.field {
	list-style: none;
	float: left;
}

#scrib_meditor label {
	color: #888;
	display: block;
}

















/* styles for marcish form */
#scrib_meditor li.suppress {
	display: none;
}

#scrib_meditor-marcish-attribution .a input{
	margin-left: 35px;
	width: 565px;
}

#scrib_meditor-marcish-title .a input{
	width: 465px;
}
#scrib_meditor-marcish-title .src input{
	width: 98px;
}

#scrib_meditor-marcish-creator .name input{
	width: 338px;
}

#scrib_meditor-marcish-creator .role input{
	width: 125px;
}
#scrib_meditor-marcish-creator .src input{
	width: 98px;
}

#scrib_meditor-marcish-subject li.fieldset{
	overflow: hidden;
}
#scrib_meditor-marcish-subject select{
	width: 15px;
}
#scrib_meditor-marcish-subject select:hover, #scrib_meditor-marcish-subject select:focus{
	width: 75px;
}
#scrib_meditor-marcish-subject input{
	width: 40px;
}
#scrib_meditor-marcish-subject input:hover, #scrib_meditor-marcish-subject input:focus {
	width: 115px;
}
#scrib_meditor-marcish-subject .dictionary {
	margin-left: 5px ;
}

#scrib_meditor-marcish-subject_date input{
	width: 75px;
}
#scrib_meditor-marcish-subject_date .src{
	margin-left: 15px ;
}

#scrib_meditor-marcish-subject_geo input{
	width: 115px;
}
#scrib_meditor-marcish-subject_geo .src{
	margin-left: 15px ;
}
#scrib_meditor-marcish-subject_geo .src input{
	width: 75px;
}

#scrib_meditor-marcish-callnumbers .src{
	margin-left: 15px ;
}
#scrib_meditor-marcish-callnumbers .src input{
	width: 75px;
}

#scrib_meditor-marcish-text .content{
	clear: left;
	margin-left: 35px ;
}

#scrib_meditor-marcish-text .lang {
	margin-left: 15px ;
}
#scrib_meditor-marcish-text .lang input {
	width: 100px;
}
#scrib_meditor-marcish-text .src {
	margin-left: 15px ;
}
#scrib_meditor-marcish-text .src input {
	width: 100px;
}
#scrib_meditor-marcish-text .content textarea{
	width: 575px;
	height: 100px;
}
#scrib_meditor-marcish-text .notes {
	clear: left;
	margin-left: 35px;
}
#scrib_meditor-marcish-text .notes input{
	width: 575px;
}

#scrib_meditor-marcish-published input{
	width: 65px;
}
#scrib_meditor-marcish-published .edition, #scrib_meditor-marcish-published .lang , #scrib_meditor-marcish-published .publisher, #scrib_meditor-marcish-published .src {
	margin-left: 15px;
}
#scrib_meditor-marcish-published .copyright{
	clear: left;
	margin-left: 35px;
}
#scrib_meditor-marcish-published .copyright_note input{
	width: 340px;
}


#scrib_meditor-marcish-description_physical input{
	width: 65px;
}
#scrib_meditor-marcish-description_physical .wv {
	clear: left;
	margin-left: 35px;
}
#scrib_meditor-marcish-description_physical .duration {
	clear: left;
	margin-left: 35px;
}
#scrib_meditor-marcish-description_physical .cv {
	clear: left;
	margin-left: 35px;
}
#scrib_meditor-marcish-description_physical .src {
	margin-left: 85px;
}


#scrib_meditor-marcish-format input{
	width: 40px;
}
#scrib_meditor-marcish-format input:hover, #scrib_meditor-marcish-format input:focus {
	width: 115px;
}

#scrib_meditor-marcish-idnumbers .src{
	margin-left: 15px ;
}
#scrib_meditor-marcish-idnumbers .src input{
	width: 75px;
}


#scrib_meditor-marcish-source input {
	width: 100px;
}
#scrib_meditor-marcish-source .file input {
	width: 380px;
}
#scrib_meditor-marcish-source .dy {
	margin-left: 25px;
}
#scrib_meditor-marcish-source .dy input, #scrib_meditor-marcish-source .dm input, #scrib_meditor-marcish-source .dd input {
	width: 75px;
}
#scrib_meditor-marcish-source .box {
	clear: left;
}
#scrib_meditor-marcish-source .collection input {
	width: 330px;
}
#scrib_meditor-marcish-source .publisher {
	clear: left;
}
#scrib_meditor-marcish-source .publisher input {
	width: 665px;
}

#scrib_meditor-marcish-rel_next .a , #scrib_meditor-marcish-rel_previous .a , #scrib_meditor-marcish-rel_reverse .a {
	margin-left: 35px ;
}

#scrib_meditor-marcish-rel_parent input , #scrib_meditor-marcish-rel_child input , #scrib_meditor-marcish-rel_next input , #scrib_meditor-marcish-rel_previous input , #scrib_meditor-marcish-rel_reverse input {
	width: 300px ;
}













/* styles for arc form */
#scrib_meditor-arc-title .a input{
	width: 565px;
}

#scrib_meditor-arc-creator .name input{
	width: 300px;
}

#scrib_meditor-arc-creator .role input{
	width: 125px;
}

#scrib_meditor-arc-creator .contributor{
	text-align: right;
}

#scrib_meditor-arc-subject li.field{
	float: left;
}
#scrib_meditor-arc-subject input{
	width: 40px;
}
#scrib_meditor-arc-subject input:hover, #scrib_meditor-arc-subject input:focus {
	width: 115px;
}

#scrib_meditor-arc-geog li.field{
	float: left;
}
#scrib_meditor-arc-geog input{
	width: 40px;
}
#scrib_meditor-arc-geog input:hover, #scrib_meditor-arc-geog input:focus {
	width: 115px;
}


#scrib_meditor-arc-date_coverage input{
	width: 75px;
}

#scrib_meditor-arc-description .a textarea{
	width: 675px;
	height: 100px;
}


#scrib_meditor-arc-description .cy{
	clear: left;
}

#scrib_meditor-arc-description input{
	width: 75px;
}

#scrib_meditor-arc-description .lang {
	margin-left: 115px;
}

#scrib_meditor-arc-description .lang input{
	width: 100px;
}


#scrib_meditor-arc-description .copyright{
	clear: left;
}
#scrib_meditor-arc-description .copyright_note input{
	width: 450px;
}


#scrib_meditor-arc-dimensions input{
	width: 75px;
}
#scrib_meditor-arc-dimensions .wv {
	margin-left: 20px;
}


#scrib_meditor-arc-format li.field{
	float: left;
}
#scrib_meditor-arc-format input{
	width: 40px;
}
#scrib_meditor-arc-format input:hover, #scrib_meditor-arc-format input:focus {
	width: 115px;
}


#scrib_meditor-arc-transcript .a textarea{
	width: 675px;
	height: 100px;
}

#scrib_meditor-arc-translation .a textarea{
	width: 565px;
	height: 100px;
}
#scrib_meditor-arc-translation .lang {
	clear: left;
	margin-left: 35px ;
}
#scrib_meditor-arc-translation .lang input{
	width: 100px;
}
#scrib_meditor-arc-translation .notes input{
	width: 425px;
}

#scrib_meditor-arc-source input {
	width: 100px;
}
#scrib_meditor-arc-source .file input {
	width: 380px;
}
#scrib_meditor-arc-source .dy {
	margin-left: 25px;
}
#scrib_meditor-arc-source .dy input, #scrib_meditor-arc-source .dm input, #scrib_meditor-arc-source .dd input {
	width: 75px;
}
#scrib_meditor-arc-source .box {
	clear: left;
}
#scrib_meditor-arc-source .collection input {
	width: 330px;
}
#scrib_meditor-arc-source .publisher {
	clear: left;
}
#scrib_meditor-arc-source .publisher input {
	width: 665px;
}

#scrib_meditor-arc-exhibit .a input {
	width: 300px;
}

#scrib_meditor-arc-rel_next .a , #scrib_meditor-arc-rel_previous .a , #scrib_meditor-arc-rel_reverse .a {
	margin-left: 35px ;
}

#scrib_meditor-arc-rel_parent input , #scrib_meditor-arc-rel_child input , #scrib_meditor-arc-rel_next input , #scrib_meditor-arc-rel_previous input , #scrib_meditor-arc-rel_reverse input {
	width: 300px ;
}

#scrib_meditor_addrelated_needsid , #scrib_meditor_addrelated{
	margin-left: 35px ;
}


/*

#postdivrich div.inside{
	margin: 0;
}

#postdivrich.closed #editor-toolbar{
	margin-top:-30px;
}
*/

